name:                gbc2Tga
version:             0.1.0.0
synopsis:            Simple tool for convert from Hicolour GBC format
description:         Please see README.md
homepage:            https://github.com/githubuser/gbc2Tga#readme
license:             BSD3
license-file:        LICENSE.md
author:              Griever
maintainer:          example@example.com
copyright:           2016 Griever
category:            Hacking
build-type:          Simple
cabal-version:       >=1.10

executable gbc2Tga
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, bytestring, JuicyPixels, binary, split
  ghc-options:         -O2 -Wall -fwarn-tabs
